<resources>
    <string name="app_name">Stressless</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_your_mail">Enter your Mail</string>
    <string name="deine_mail">Deine Mail</string>
    <string name="enter_password">Geben Sie Ihr Passwort ein.</string>
    <string name="weiter">Weiter</string>
    <string name="register">Neu dabei?</string>
    <string name="your_password">Dein Passwort</string>
    <string name="go_back">Zurück</string>
    <string name="mail_error_message">Mail nicht valide.</string>
    <string name="name_str">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="found_new">Gründe neue</string>
    <string name="reg_or_apply_header">Gib WG ID ein, oder Gründe eine neue.</string>
</resources>