<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.Stressless.AuthenticationActivities"
    android:id="@+id/Register_User"
    tools:context=".ui.login.Register_User">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/Theme.Stressless.GridTheme">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/name_str"/>

        <EditText
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:id="@+id/name_input"/>

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/e_mail"/>

        <EditText
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:id="@+id/mail_input"/>

        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/password"/>

        <EditText
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:inputType="textPassword"
            android:id="@+id/password_input"/>
    </GridLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="10dp"
        android:textSize="12sp"
        android:text="@string/weiter"
        android:onClick="register"/>

</FrameLayout>