<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enter_mail_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".ui.login.EnterMail"
    android:theme="@style/Theme.Stressless.AuthenticationActivities">

    <EditText
        android:id="@+id/input_mail_ident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Stressless.EditText"
        android:hint="@string/deine_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/submitMailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Stressless.Button"
        android:text="@string/weiter"
        android:onClick="enterMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_mail_ident"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Stressless.Button"
        android:text="@string/register"
        android:onClick="register"
        app:layout_constraintTop_toBottomOf="@id/input_mail_ident"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
