<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.Stressless.AuthenticationActivities"
    android:id="@+id/enter_password_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".ui.login.EnterPassword">

    <EditText
        android:id="@+id/input_password_ident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkIdentityButton"
        android:theme="@style/Theme.Stressless.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkPassword"
        android:text="@string/weiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password_ident"/>

    <Button
        android:id="@+id/back_to_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Stressless.Button"
        android:onClick="back"
        android:text="@string/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password_ident"/>


</androidx.constraintlayout.widget.ConstraintLayout>