<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.Register_Or_Apply_To_Community"
    android:theme="@style/Theme.Stressless.AuthenticationActivities">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Stressless.TextView.Header"
            android:id="@+id/header"
            android:text="@string/reg_or_apply_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/community_id_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Theme.Stressless.EditText"
            android:hint="Z.B: #A2345678"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Stressless.Button"
            android:text="@string/found_new"
            android:onClick="found_new_community"
            app:layout_constraintTop_toBottomOf="@id/community_id_input"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Stressless.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/community_id_input"
            android:onClick="applyForCommunity"
            android:text="@string/weiter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>